--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script defer src="./assets/js/bookData.js"></script>
     <script defer src="./assets/js/script.js"></script>
-    <title>Document</title>
+    <title>BootCamp Book Club</title>
 </head>
 <body>
     
