added completed book sections with java and css code added scrolling feature to display user competed books

--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container my-5">
+        <h2 class="text-center mb-4">Completed Books</h2>
+        <div class="book-container position-relative mb-3">
+            <div id="left-arrow" class="arrow position-absolute start-0 top-50 translate-middle-y" style="font-size: 2rem; cursor: pointer;">&lt;</div>
+            <div id="book-scroll" class="book-scroll d-flex overflow-hidden">
+                <!-- Book images added here? -->
+            </div>
+            <div id="right-arrow" class="arrow position-absolute end-0 top-50 translate-middle-y" style="font-size: 2rem; cursor: pointer;">&gt;</div>
+        </div>
+    </div>
 
+    <script src="script.js"></script>
+    
+   
 </body>
 </body>
 </html>
