remerged main and commented out non-working area

--- a/index.html
+++ b/index.html
@@ -9,27 +9,15 @@
     <script defer src="./assets/js/script.js" type="module"></script>
     <title>BootCamp Book Club</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="./index.html">Bootcamp Book Club</a>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginFormModal">Login</a>
-            <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#registrationFormModal">Sign Up</a>
-            <a class="nav-item nav-link" href="#">Currently Reading</a>
-            <a class="nav-item nav-link" href="#">To Be Read</a>
-            <a class="nav-item nav-link" href="#completedBooks">Completed Books</a>
-            <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#bookFormModal">Add A Book</a>
-          </div>
-        </div>
-      </nav>
 
-    <div class="container my-5" id="completedBooks">
+
+
+<!--     <div class="container my-5" id="completedBooks">
         <h2 class="text-center mb-4">Completed Books</h2>
         <div class="book-container position-relative mb-3">
             <div id="left-arrow" class="arrow position-absolute start-0 top-50 translate-middle-y" style="font-size: 2rem; cursor: pointer;">&lt;</div>
             <div id="book-scroll" class="book-scroll d-flex overflow-hidden">
-                <!-- Book images added here? -->
+                <!- - Book images added here? - ->
             </div>
             <div id="right-arrow" class="arrow position-absolute end-0 top-50 translate-middle-y" style="font-size: 2rem; cursor: pointer;">&gt;</div>
         </div>
@@ -37,10 +25,10 @@
     
     <main class="container-fluid p-5">
 
-        <!-- Button to trigger modal --> 
+        <!- - Button to trigger modal - -> 
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#bookFormModal"> Add Book </button> 
 
-        <!-- Modal --> 
+        <!- - Modal - -> 
         <div class="modal fade" id="bookFormModal" tabindex="-1" aria-labelledby="bookFormModalLabel" aria-hidden="true"> 
             <div class="modal-dialog"> 
                 <div class="modal-content"> 
@@ -91,7 +79,7 @@
 
 
 
-        <!-- Modal  (Use this for the project1 registration modal)--> 
+        <!- - Modal  (Use this for the project1 registration modal)- -> 
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#registrationFormModal"> Sign Up! </button> 
 
         <div class="modal fade" id="registrationFormModal" tabindex="-1" aria-labelledby="registrationModalLabel" aria-hidden="true"> 
@@ -128,10 +116,10 @@
         </div>
 
 
-        <!-- Button to trigger login modal --> 
+        <!- - Button to trigger login modal - -> 
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginFormModal"> Login </button> 
 
-        <!-- Modal --> 
+        <!- - Modal - -> 
         <div class="modal fade" id="loginFormModal" tabindex="-1" aria-labelledby="loginFormModalLabel" aria-hidden="true"> 
             <div class="modal-dialog"> 
                 <div class="modal-content"> 
@@ -164,11 +152,23 @@
 
 </body>
 
-</html>
+</html> -->
 <!--bigHTML Below-->
-<!-- <body>
+<body>
     <main>
-
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="./index.html">Bootcamp Book Club</a>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginFormModal">Login</a>
+                <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#registrationFormModal">Sign Up</a>
+                <a class="nav-item nav-link" href="#">Currently Reading</a>
+                <a class="nav-item nav-link" href="#">To Be Read</a>
+                <a class="nav-item nav-link" href="#completedBooks">Completed Books</a>
+                <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#bookFormModal">Add A Book</a>
+              </div>
+            </div>
+          </nav>
 
         <centerSection class="container-fluid d-flex flex-row flex-wrap">
    
