Commiting current changes to do a git pull after most recent PR was merged

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <a class="nav-item nav-link" href="#">To Be Read</a>
             <a class="nav-item nav-link" href="#completedBooks">Completed Books</a>
             <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#bookFormModal">Add A Book</a>
+            <!-- <form class="form-inline justify-content-end">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search Books" aria-label="Search">
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+              </form> -->
           </div>
         </div>
       </nav>
