--- a/index.html
+++ b/index.html
@@ -154,22 +154,27 @@
 <body>
     <main>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="./index.html">Bootcamp Book Club</a>
-            <div class="collapse navbar-collapse justify-content-between" id="nav">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginFormModal">Login</a>
-                <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#registrationFormModal">Sign Up</a>
-                <a class="nav-item nav-link" href="#">Currently Reading</a>
-                <a class="nav-item nav-link" href="#">To Be Read</a>
-                <a class="nav-item nav-link" href="#completedBooks">Completed Books</a>
-                <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#bookFormModal">Add A Book</a>
-                <form class="form-inline" id="searchBooks">
-                <input class="form-control mr-sm-1" type="search" placeholder="Search Books By Title" aria-label="Search">
-            </form>
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+            <div class="container fluid">
+                <a class="navbar-brand" href="./index.html">Bootcamp Book Club</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginFormModal">Login</a>
+                        <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#registrationFormModal">Sign Up</a>
+                        <a class="nav-item nav-link" href="#">Currently Reading</a>
+                        <a class="nav-item nav-link" href="#">To Be Read</a>
+                        <a class="nav-item nav-link" href="#completedBooks">Completed Books</a>
+                        <a class="nav-item nav-link" href="#" data-bs-toggle="modal" data-bs-target="#bookFormModal">Add A Book</a>
+                        <form class="form-inline d-flex" id="searchBooks">
+                            <input class="form-control mr-sm-1" type="search" placeholder="Search Books By Title" aria-label="Search">
+                        </form>
+                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+                    </div>
+                </div>
             </div>
-            </div>
-          </nav>
+        </nav>
 
           <div class="container mt-5">
             <div id="searchResults" class="row"></div>
