refreshed new, fixed background shading

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         
         
                 <upperRegion>
-                    <div class="d-flex flex-row flex-fill flex-wrap justify-content-around border rounded border-dark">
+                    <div class="d-flex flex-row flex-fill flex-wrap justify-content-around" style="background-color: lightgray;">
 
                     <imgBox class="justify-content-around col-md-5">
                         <img src="./assets/images/bookClubLogo.svg" class="img-fluid">
@@ -333,7 +333,7 @@
                 <bottomRegion class="m-5">
                     <div class="d-flex m-3"></div>
 
-                    <div class="container my-5 border border-dark" id="completedBooks">
+                    <div class="container my-5" id="completedBooks"  style="background-color: lightgray;">
                         <h2 class="text-center mb-4">Completed Books</h2>
                         <div class="book-container position-relative mb-3">
                             <div id="left-arrow" class="arrow position-absolute start-0 top-50 translate-middle-y" style="font-size: 2rem; cursor: pointer;">&lt;</div>
