Create welcome message to be displayed on page load. Need to add function to JS that will replace message with welcome message for successful login or registration.

--- a/index.html
+++ b/index.html
@@ -194,23 +194,23 @@
 
                     <div class="p-4 flex-wrap col-md-5">
 
-                        <h2 class="card bg-dark">
+                        <!-- <h2 class="card bg-dark">
                             <div class="card-title">
-                                <p class="m-3 text-center text-white">BootCampBookClub</p>
+                                <p class="m-3 text-center text-white">Bootcamp Book Club</p>
                             </div>
-                        </h2> 
+                        </h2>  -->
  
                         <h3 class="card bg-secondary">
                             <div class="card-title">
-                                <p class="m-2 text-center text-white">Hello XXXX!</p>
+                                <p class="m-2 text-center text-white" id="welcomeMessage">Welcome to our book club! Please <a href="#" data-bs-toggle="modal" data-bs-target="#loginFormModal" class="link-light">login</a> or <a href="#" data-bs-toggle="modal" data-bs-target="#registrationFormModal" class="link-light">register</a> to get started!</p>
                             </div>
                         </h3>
 
-                        <h3 class="card bg-secondary">
+                        <!-- <h3 class="card bg-secondary">
                             <div class="card-title">
                                 <p class="m-2 text-center text-white">Welcome to the Club!</p>
                             </div>
-                        </h3>
+                        </h3> -->
 
                         <div class="text-center p-5">
                             <button type="button" class="btn btn-outline-success btn-lg mx-auto" data-bs-toggle="modal" data-bs-target="#loginFormModal">Logon</button>
