--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
         </nav>
 
-          <div class="container mt-">
+          <div class="container mt-5">
             <div id="searchResults" class="row"></div>
         </div>
 
