Fixed search button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <form class="form-inline d-flex" id="searchBooks">
                             <input class="form-control mr-sm-1" type="search" placeholder="Search Books By Title"
                                 aria-label="Search" />
-                                <button class="btn btn-outline-light my-2 my-sm-0" type="submit" >
+                                <button id="searchBooksButton" class="btn btn-outline-light my-2 my-sm-0" type="submit" >
                                     Search
                                 </button>
                             </form>
