--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
                             </div>
                             <!--END RANDOM BOOK DISPLAY-->
                             <div class="text-center p-1">
-                                <button type="button" class="btn btn-outline-success btn-lg mx-auto">
+                                <!--<button type="button" class="btn btn-outline-success btn-lg mx-auto">
                                     Add to List!
-                                </button>
+                                </button>-->
                             </div>
                         </div>
 
@@ -315,13 +315,13 @@
                     </h4>
 
 
-                    <div class="card-title bg-dark container" id="currentBook">
+                    <!--<div class="card-title bg-dark container" id="currentBook">
                         <center bs-data-theme="dark" class="bg-dark mx-0 my-0">
                             <h3 class="text-light"> Currently Reading: </h3>
-                            <img id="asideImage" src="./assets/images/the-lord-of-the-rings-book-cover.jpg"
+                            <img id="asideImage";
                                 class="img-fluid center-block py-auto">
                         </center>
-                    </div>
+                    </div>-->
                 </asideTop>
 
 
@@ -340,6 +340,7 @@
                             id="completeBookButton">Complete A Book!</button>
                         </div>
                     </h4>
+                </asideMiddle>
 
 
         </centerSection>
