--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@
 
 
                 <asideMiddle class="p-2">
-                    <h4 class="card">
+                    <h4 class="card"><!--
                         <div class="card-title">
                             <p class="m-2 text-center bg-dark text-white">To Be Read:</p>
                         </div>
-                        <h2 class="card bg-secondary text-center p-2 ">XXXX</h2>
+                        <h2 class="card bg-secondary text-center p-2 ">XXXX</h2>-->
                         <div class="text-center">
                             <button type="button" class="btn btn-outline-success btn-lg my-3" data-bs-toggle="modal"
                                 data-bs-target="#bookFormModal">Add a New Book!</button>
